--- a/app.json
+++ b/app.json
@@ -22,11 +22,11 @@
             "value": ""
         },
         "API_ID": {
-            "description": "Get this value from https://my.telegram.org" or "@Mytele_ORGbot",
+            "description": "Get this value from https://my.telegram.org",
             "value": ""
         },
         "API_HASH": {
-            "description": "Get this value from https://my.telegram.org" or "@Mytele_ORGbot",
+            "description": "Get this value from https://my.telegram.org",
             "value": ""
         },
         "CHANNELS": {
